refactor: Sections of(Section... section) 가변인수 사용하는 부분 개선