@@ -24,31 +24,21 @@ public class Sections {
     }
 
     private Sections(Section section) {
-        sections = new ArrayList<>();
         section.changeToFirst();
-        sections.add(section);
+        sections = new ArrayList<>(List.of(section));
     }
 
-    private Sections(Section... section) {
-        sections = new ArrayList<>(Arrays.asList(section));
-        sections.get(0).changeToFirst();
+    private Sections(Section startSection, Section secondSection) {
+        startSection.changeToFirst();
+        sections = new ArrayList<>(List.of(startSection, secondSection));
     }
 
-    public static Sections of(Line line, Station upStation, Station downStation, Integer distance) {
-        return new Sections(createSection(line, upStation, downStation, distance));
-    }
-
-    public static Sections of(Section... section) {
+    public static Sections from(Section section) {
         return new Sections(section);
     }
 
-    private static Section createSection(Line line, Station upStation, Station downStation, Integer distance) {
-        return Section.builder()
-                .line(line)
-                .upStation(upStation)
-                .downStation(downStation)
-                .distance(distance)
-                .build();
+    public static Sections of(Section startSection, Section secondSection) {
+        return new Sections(startSection, secondSection);
     }
 
     public void add(Section section) {
